force-app/main/default/objects/CampaignHistory__c/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>CampaignHistories</relationshipLabel>
    <relationshipName>CampaignHistories</relationshipName>
    <type>Lookup</type>
</CustomField>