force-app/main/default/objects/CampaignHistory__c/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>CampaignHistories</relationshipLabel>
    <relationshipName>CampaignHistories</relationshipName>
    <type>Lookup</type>
</CustomField>